- fixed missed align iframe UI after QR scan result - added costant urls - addEventListener device ready for SQLite prevent error in browser desktop mode - added app.fryer-entry app.page - fixed tmps locations request with token claim - addEventListener device ready for qr cordovaBarcodeScanner prevent throw error in browser desktop mode - added ionicLoading screen when backend/ajax request is processing.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -47,9 +47,14 @@
     background: #fff;
     box-shadow: 0px 1px;
 }
+iframe {
+    width: 100%;
+    min-height: 200px;
+}
 /*---------------------------------------------------------------------------------------------
 | END TMPS LOCATION
 ---------------------------------------------------------------------------------------------*/
+
 
 .center {
     margin-left: auto;
